# Not-Minecraft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
imgui-cmake/: CMakeLists.txt
include/: ABlock.hpp  Block.hpp  Camera.hpp  Player.hpp  Utils.hpp
include/Graphics/: EBO.hpp  ImguiDebugUi.hpp  Shader.hpp  SpriteManager.hpp  SpriteSheet.hpp  Texture.hpp  VAO.hpp  VBO.hpp  openGLThings.hpp
include/WorldGen/: Block.hpp  Chunk.hpp  World.hpp  WorldGen.hpp
shaders/BlockSelected/: default.frag
shaders/BlockTexture/: default.frag  default.vert
src/: ABlock.cpp  Block.cpp  Camera.cpp  ImguiDebugUi.cpp  Player.cpp  main.cpp
src/Graphics/: EBO.cpp  Shader.cpp  SpriteManager.cpp  SpriteSheet.cpp  Texture.cpp  VAO.cpp  VBO.cpp  openGLThings.cpp
src/WorldGen/: Chunk.cpp  World.cpp  WorldGen.cpp
